fix: list of channel overflow on small screens
Adapts the CSS for the `toogle-live-audio-video` showcase to avoid overflowing
of the channel list outside of the screen.

--- a/static/showcases/toggle-live-audio-video.scss
+++ b/static/showcases/toggle-live-audio-video.scss
@@ -3,7 +3,8 @@
 
 #streams {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: var(--size-1);
   margin-top: var(--size-3);
 
   button {
